<resources>
    <string name="app_name">SVIP</string>
    <string name="home_nav_index">首页</string>
    <string name="home_nav_found">发现</string>
    <string name="home_nav_message">消息</string>
    <string name="home_nav_me">我的</string>
    <string name="drawer">抽屉</string>
    <string name="hotlines">热线</string>
    <string name="about_us">关于</string>
    <string name="setting">设置</string>
    <string name="love">靓妹</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="useful_sites">Useful View</string>
    <string name="action_search">搜索</string>
    <string name="text_expand">您的信用非常珍贵，请务必准时还款，如逾期还款将对您的信用产生影响，个人不良信用将会记入央行征信黑名单，黑名单将会被限制：坐飞机，坐轮船，做火车，住宿；且不能贷款买房，不能买车</string>
    <string name="text_high_light">达令是谁, 达令是darling</string>
</resources>
